# ChangeLog for x11-libs/fltk
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/fltk/ChangeLog,v 1.111 2009/02/02 15:50:01 ranger Exp $

  02 Feb 2009; Brent Baude <ranger@gentoo.org> fltk-1.1.9.ebuild:
  keyworded ~arch for ppc64, bug 254386

  31 Jan 2009; Jeroen Roovers <jer@gentoo.org> fltk-1.1.9.ebuild:
  Marked ~hppa (bug #254386).

  18 Jan 2009; Tobias Klausmann <klausman@gentoo.org>
  fltk-2.0_pre6525.ebuild:
  Keyworded on alpha, bug #253082

  11 Jan 2009; Guy Martin <gmsoft@gentoo.org> fltk-2.0_pre6525.ebuild:
  re-added ~hppa, #253082

*fltk-1.1.9 (09 Jan 2009)

  09 Jan 2009; Sébastien Fabbro <bicatali@gentoo.org>
  +files/fltk-1.1.9-as-needed.patch, +files/fltk-1.1.9-conf-tests.patch,
  +files/fltk-1.1.9-desktop.patch, metadata.xml, +fltk-1.1.9.ebuild:
  Version bump for 1.1, with ebuild modernization and added games. Dropping
  ppc64 and hppa until htmldoc is keyworded.

  09 Jan 2009; Rémi Cardona <remi@gentoo.org> fltk-1.1.7.ebuild,
  fltk-1.1.7-r2.ebuild, fltk-1.1.7-r3.ebuild, fltk-2.0_pre6525.ebuild:
  Change virtual/xft dependency to x11-libs/libXft, bug 253771.

  07 Jan 2009; Brent Baude <ranger@gentoo.org> fltk-2.0_pre6525.ebuild:
  Marking fltk-2.0_pre6525 ppc64 for bug 253082

  05 Jan 2009; Markus Meier <maekke@gentoo.org> metadata.xml:
  drop local xft USE-flag description, as it's global now

  30 Dec 2008; Ben de Groot <yngwin@gentoo.org> -fltk-2.0_pre6403.ebuild,
  -fltk-2.0_pre6483.ebuild, fltk-2.0_pre6525.ebuild:
  Removing old snapshots. Minor ebuild improvements wrt die messages. Add
  ~ppc keyword, bug 242774#c13.

*fltk-2.0_pre6525 (15 Dec 2008)

  15 Dec 2008; Ben de Groot <yngwin@gentoo.org> +fltk-2.0_pre6525.ebuild:
  Version bump. Make dohtml recursive (bug 246696) and prevent pre-stripping
  (bug 246694).

  23 Nov 2008; Ferris McCormick <fmccor@gentoo.org> fltk-2.0_pre6483.ebuild:
  Add ~sparc for testing, see Bug #242774.

*fltk-2.0_pre6483 (30 Oct 2008)
