@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/fltk
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/fltk/ChangeLog,v 1.111 2009/02/02 15:50:01 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/fltk/ChangeLog,v 1.112 2009/02/24 12:51:27 armin76 Exp $
+
+  24 Feb 2009; Raúl Porcel <armin76@gentoo.org> fltk-1.1.7-r2.ebuild,
+  fltk-1.1.7-r3.ebuild, fltk-1.1.9.ebuild, fltk-2.0_pre6525.ebuild:
+  Drop sh, Re-add ~arm/~ia64 wrt #253082
 
   02 Feb 2009; Brent Baude <ranger@gentoo.org> fltk-1.1.9.ebuild:
   keyworded ~arch for ppc64, bug 254386
